# Losowe

./: .gitignore  CMakeLists.txt  socket.c
mySocketLib/: CMakeLists.txt  socket.c  socket.h
page/: error.html  page.html  page2.html
source/: main.c  page.c  page.h
